Working through content layout issues with grid. Content cards and announcments sections completed but staged for change

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 .wrapper {
     display:grid;
-    grid-template-columns: 20vw 80vw;
+    grid-template-columns: 15vw 85vw;
     grid-template-rows: 20vh 80vh;
 }
 
@@ -22,6 +22,7 @@
     align-content: flex-start;
     gap:50px;
     padding:20px;
+    text-shadow: 0 0 5px black;
     border-right:1px solid black;
 }
 
@@ -29,17 +30,14 @@
     display:flex;
     align-items: center;
     gap:5px;
-    text-shadow: 0 0 5px black;
-
 }
 
 .logo img {
     height:30px;
     width:30px;
-    color:white;
 }
 
-.nav {
+.nav, .settings{
     display:grid;
     gap:20px;
 }
@@ -48,22 +46,18 @@ a {
     text-decoration: none;
     color:white;
     font-size: 20px;
-    text-shadow: 0 0 5px black;
 }
 
 a:hover {
     text-decoration: underline;
 }
 
-.branding {
-    display:grid;
-    gap:20px;
-}
-
-.nav img,.branding img {
+.nav img,.settings img {
     height:17px;
     width:17px;
 }
+
+/*Header section*/
 
 .header {
     grid-row: 1 / 2;
@@ -72,31 +66,34 @@ a:hover {
     grid-template-rows: 1fr 1fr;
     padding:15px;
     row-gap: 15px;
-    
+    margin-left:10px;
 }
 
 .header img,.content img {
-    height:20px;
-    width:20px;
-}
-
-.header input {
-    width:90%;
-    border-radius:10px;
-    background-color: rgb(232, 229, 229);
-    height:25px;
-    border:none;
-    margin-left: 10px;
-}
-
-form {
-    padding:15px; 
-    display:flex;
+    height:15px;
+    width:15px;
 }
 
 .search {
     grid-column:1 / 2;
     grid-row:1 / 2;
+    display:flex;
+}
+
+form {
+    padding:15px; 
+    display:flex;
+    gap:10px;
+    align-items: center;
+    width:100%;
+}
+
+.header input {
+    width:100%;
+    border-radius:10px;
+    background-color: rgb(232, 229, 229);
+    height:25px;
+    border:none;
 }
 
 .welcome {
@@ -104,8 +101,8 @@ form {
     grid-row:2 / 3;
     display:flex;
     align-items: center;
+    margin-left: 10px;
     gap:20px;
-    /* justify-content: center; */
 }
 
 .welcome img {
@@ -140,7 +137,7 @@ form {
     grid-column:2 / 3;
     grid-row:2 / 3;
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3,1fr);
     justify-content: space-around;
     align-items: center;
 }
@@ -155,30 +152,37 @@ form {
     cursor: pointer;
 }
 
+/*Content section*/
+
 .content {
     grid-row: 2 / 3;
     display: grid;
-    grid-template-columns: 4fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 10fr 10fr;
     background-color: rgb(232, 229, 229);
+}
+
+.projects-title {
+    grid-column: 1/2;
+    grid-row:1/2;
+    padding-left: 20px;
+    padding-top:20px;
+    font-weight:800;
 }
 
 .projects {
     grid-column:1 / 2;
-    grid-row:1/3;
+    grid-row:2/4;
     display:grid;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3,1fr);
-    padding:20px;
+    padding-left:20px;
+    padding-bottom:20px;
     gap:20px;
 }
 
 .projects > p,.title {
     font-weight:800;
-}
-
-.projects > p{
-    display:inline;
 }
 
 .card {
@@ -187,9 +191,8 @@ form {
     background-color:white;
     border-left:7px solid orange;
     border-radius: 10px;
-    /* padding:1%; */
     justify-content: space-evenly;
-    /* gap:20px; */
+    box-shadow:  0 0 2px black;
 }
 
 .card-icons {
@@ -200,12 +203,42 @@ form {
     padding-right:20px;
 }
 
+.title,.explanation {
+    padding-left:20px;
+}
+
 .announcements {
+    /* grid-column:2/3;
+    grid-row:1/2; */
+    /* border:1px solid black; */
+    /* padding-left:20px; */
+}
+
+.announcements-title {
+    grid-column:2/3;
+    grid-row:1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    font-weight: 800;
+    padding:20px;
+}
+
+.announcements-card {
     grid-column:2 / 3;
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
+    padding:20px;
+    margin-left:20px;
+    display:flex;
+    flex-direction: column;
+    background-color: white;
+    box-shadow:  0 0 2px black;
+    border-radius:5px;
+    margin-right:20px;
+    /* border:1px solid black; */
 }
 
 .trending {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 3/4;
 }
